--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ serviceAccountKey.json
 
 #Environment variables
 .env
+.env.*
 
 # Runtime data
 pids
@@ -114,4 +115,3 @@ dist
 .vite-temp/
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
-
