--- a/package.json
+++ b/package.json
@@ -226,6 +226,7 @@
     "yocto-queue": "^0.1.0"
   },
   "devDependencies": {
+    "@types/node": "^24.10.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
